--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,3 +30,4 @@ jobs:
           ORG_GRADLE_PROJECT_signingInMemoryKeyId      : ${{ secrets.SIGNING_ID }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PW }}
           ORG_GRADLE_PROJECT_signingInMemoryKey        : ${{ secrets.SIGNING_KEY }}
+          ORG_GRADLE_PROJECT_mavenReleaseVersion       : ${{ vars.RELEASE_VERSION }}
